LU-6844 lmv: add debug message

Adding debug message for LU-6844.

Test-Parameters: fortestonly testlist=replay-single,replay-single,replay-single,replay-single,replay-single,replay-single
Signed-off-by: Di Wang <di.wang@intel.com>
Change-Id: I280c155110fbe87b548367de744bc7236c7041fa